# libdevices_dht22

./: .gitignore  CMakeLists.txt  README.md
dht22/: CMakeLists.txt  main.cpp
libdht22/: CMakeLists.txt
libdht22/include/devices/: dht22.h
libdht22/src/: dht22.cpp  dht22_stub.cpp
